After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 787014 - realmedia: Fix Memory leak in error case
realmedia: Fix Memory leak in error case
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-ugly
git master
Other Windows
: Normal normal
: 1.13.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-08-30 13:23 UTC by Satya Prakash Gupta
Modified: 2017-08-30 15:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch file is attached. (653 bytes, patch)
2017-08-30 13:23 UTC, Satya Prakash Gupta
committed Details | Review

Description Satya Prakash Gupta 2017-08-30 13:23:54 UTC
Created attachment 358759 [details] [review]
Patch file is attached.

Hi, 

File : gst-plugins-ugly/gst/realmedia/rtspreal.c

Function  rtsp_ext_real_stream_select Line : 629

There is memory leak in error path when "gst_rtsp_message_init_request" failes.

Solution : g_free (req_url)

++patch is attched for possible solution.

Kindly review the patch and provide your feedback.
Comment 1 Edward Hervey 2017-08-30 15:22:16 UTC
commit c3cf7ab5c4792d137e2f45c69b0fb73c12da7f5f (HEAD -> master, origin/master, origin/HEAD)
Author: Satya Prakash Gupta <sp.gupta@samsung.com>
Date:   Wed Aug 30 18:41:28 2017 +0530

    realmedia: Fix Memory leak in error case
    
    https://bugzilla.gnome.org/show_bug.cgi?id=787014